<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>br.net.mirante</groupId>
    <artifactId>singular</artifactId>

    <version>0.1.0-SNAPSHOT</version>
    <name>[projeto-raiz :: singular]</name>
    <packaging>pom</packaging>

    <modules>
        <module>flow</module>
        <module>ui</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>singular-releases</id>
            <name>singular-releases</name>
            <url>http://10.0.10.1/nexus/content/repositories/singular-releases</url>
        </repository>
        <snapshotRepository>
            <id>singular-snapshots</id>
            <name>singular-snapshots</name>
            <url>http://10.0.10.1/nexus/content/repositories/singular-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <!--suppress MavenModelInspection -->
                            <Implementation-Build>${project.version}.${buildNumber} | ${timestamp}</Implementation-Build>
                            <!--suppress MavenModelInspection -->
                            <Revision-Id>${revisionNumber}</Revision-Id>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.3</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <shortRevisionLength>7</shortRevisionLength>
                    <buildNumberPropertyName>revisionNumber</buildNumberPropertyName>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- Apache Commons API -->
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.2</version>
        </dependency>

        <!-- Joda Time API -->
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.7</version>
        </dependency>

        <!-- Wicket -->
        <dependency>
            <groupId>org.apache.wicket</groupId>
            <artifactId>wicket-core</artifactId>
            <version>6.19.0</version>
        </dependency>

        <!-- Google API's -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <scm>
        <url>${project.scm.url}</url>
        <connection>${project.scm.connection}</connection>
        <developerConnection>${project.scm.developerConnection}</developerConnection>
    </scm>

    <profiles>
        <profile>
            <id>test</id>
            <activation>
                <property>
                    <name>UNIT_TEST</name>
                    <value>TRUE</value>
                </property>
            </activation>
            <properties>
                <skipTests>false</skipTests>
            </properties>
        </profile>
    </profiles>

    <properties>
        <project.scm.url>http://10.0.0.22/r/MIRANTE/singular.git</project.scm.url>
        <project.scm.connection>scm:git:http://10.0.0.22/r/MIRANTE/singular.git</project.scm.connection>
        <project.scm.developerConnection>scm:git:http://10.0.0.22/r/MIRANTE/singular.git</project.scm.developerConnection>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.8</jdk.version>
        <skipTests>true</skipTests>
    </properties>

</project>
